kubernetes/apps/dev/forgejo/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.greyrock.io/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo
spec:
  hostnames:
    - git.greyrock.io
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - name: forgejo-anubis
          port: 8080
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Real-Ip
                value: "%DOWNSTREAM_REMOTE_ADDRESS_WITHOUT_PORT%"
      timeouts:
        request: 300s
